CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Test)

SET(CMAKE_CXX_COMPILER "/usr/bin/g++")

#set compiler param
SET(CMAKE_CXX_FLAGS    "-std=c++11 -pthread -g")

#set include dir
#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} SRC_LIST)

#set output dir
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY(sortModule)
ADD_SUBDIRECTORY(demo)
